[package]
name = "gedcom_parser"
version = "0.1.0"
authors = ["Robin Pham <robin.pham@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
serde_json = "1.0"
serde = { version = "^1.0.59", features = ["derive"] }
#serde_derive = "^1.0.59"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"]}
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
# opt-level = 3 
